se agrego el codigo del microcontrolador .ino para mandar la informacion de los sensores a los microservicios

--- a/microservicio-1/microcontrolador_simulador_lectura.html
+++ b/microservicio-1/microcontrolador_simulador_lectura.html
@@ -177,7 +177,7 @@
         let maxHumedad = 15;
         let humedadRandom = Math.floor(Math.random() * (maxHumedad - minHumedad + 1)) + minHumedad;
         var lectura = String(temperaturaRandom)+','+String(humedadRandom);
-        socketLectura.send(JSON.stringify({ type: 'message', message:lectura }));
+        socketLectura.send(JSON.stringify({ type: 'message', content:lectura }));
       }, 400);
 
   </script>
